ultron-workflow/logs/health_api.log
2026-03-06T06:21:00.084365 - 服务已启动, PID: 2648559
2026-03-06T06:22:58.074477 - 服务已停止, PID: 2648559
2026-03-06T06:23:00.077895 - 服务已启动, PID: 2651412
  File "/root/.openclaw/workspace/ultron-workflow/modules/health_api_server.py", line 68
    elif path == '/api/enhanced-metrics':
    ^^^^
SyntaxError: invalid syntax
2026-03-06T06:23:49.562907 - 停止失败
2026-03-06T06:23:51.565960 - 服务已启动, PID: 2652627
2026-03-06T10:55:12.950853 - 健康检查失败，尝试重启...
2026-03-06T10:55:12.951181 - 停止失败
2026-03-06T10:55:14.954692 - 服务已启动, PID: 3043470
2026-03-06T10:55:17.957981 - 重启成功
2026-03-06T12:49:00.275791 - 健康检查失败，尝试重启...
2026-03-06T12:49:00.276258 - 停止失败
2026-03-06T12:49:02.278757 - 服务已启动, PID: 3234378
2026-03-06T12:49:05.280890 - 重启失败
2026-03-06T12:50:07.780533 - 健康检查失败，尝试重启...
2026-03-06T12:50:07.780755 - 停止失败
2026-03-06T12:50:09.783969 - 服务已启动, PID: 3236327
2026-03-06T12:50:12.788553 - 重启成功
2026-03-06T12:52:27.934580 - 健康检查失败，尝试重启...
2026-03-06T12:52:27.934815 - 停止失败
2026-03-06T12:52:29.936968 - 服务已启动, PID: 3238238
2026-03-06T12:52:32.942187 - 重启成功
2026-03-06T12:54:40.405501 - 健康检查失败，尝试重启...
2026-03-06T12:54:40.405821 - 停止失败
2026-03-06T12:54:42.410625 - 服务已启动, PID: 3239922
2026-03-06T12:54:45.414820 - 重启成功
2026-03-06T12:56:47.975320 - 健康检查失败，尝试重启...
2026-03-06T12:56:47.975561 - 停止失败
2026-03-06T12:56:49.977953 - 服务已启动, PID: 3241570
2026-03-06T12:56:52.983790 - 重启成功
2026-03-06T12:59:16.809327 - 健康检查失败，尝试重启...
2026-03-06T12:59:16.809600 - 停止失败
2026-03-06T12:59:18.813464 - 服务已启动, PID: 3243238
2026-03-06T12:59:21.818521 - 重启成功
